// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`makeMapStyle > layer inventory > hosted 1`] = `
[
  "omt_background",
  "omt_water",
  "omt_glacier",
  "omt_sand",
  "omt_wood",
  "omt_residential",
  "omt_building",
  "omt_waterway",
  "omt_runway",
  "omt_road_minor",
  "omt_road_secondary",
  "omt_road_primary",
  "omt_road_motorway",
  "omt_rail",
  "omt_boundary",
  "omt_water_label",
  "omt_road_label",
  "omt_place_village",
  "omt_place_town",
  "omt_place_state",
  "omt_place_country",
  "sm_anchorage_area",
  "sm_building_area",
  "sm_sea_area",
  "sm_rescue_station_area",
  "sm_anchor_berth_area",
  "sm_restricted_area",
  "sm_dredged_area",
  "sm_pontoon",
  "sm_fairway",
  "sm_small_craft_facility_area",
  "sm_hulk_area",
  "sm_pipeline_area",
  "sm_seaplane_landing_area",
  "sm_marine_farm_area",
  "sm_dumping_ground",
  "sm_cable_area",
  "sm_military_area",
  "sm_precautionary_area",
  "sm_landmark_area",
  "sm_cable_submarine",
  "sm_restricted_area_line",
  "sm_marine_farm_line",
  "sm_pipeline_submarine",
  "sm_pontoon_line",
  "sm_ferry_route",
  "sm_landmark_line",
  "sm_sea_area_line",
  "sm_anchorage-line-copy",
  "sm_anchorage-line",
  "sm_pile",
  "sm_mooring",
  "sm_rock",
  "sm_obstruction",
  "sm_light_color_1",
  "sm_light_color",
  "sm_anchorage",
  "sm_anchor_berth",
  "sm_beacon_cardinal",
  "sm_beacon_isolated_danger",
  "sm_beacon-pole",
  "sm_beacon_lateral",
  "sm_beacon_safe_water",
  "sm_beacon_special_purpose",
  "sm_topmark",
  "sm_buoy_installation",
  "sm_bridge_width",
  "sm_bridge_height",
  "sm_bunker_station",
  "sm_buoy_cardinal",
  "sm_buoy_isolated_danger",
  "sm_buoy_lateral",
  "sm_buoy_safe_water",
  "sm_buoy_special_purpose",
  "sm_coastguard_station",
  "sm_crane",
  "sm_distance_mark",
  "sm_daymark",
  "sm_fog_signal",
  "sm_hulk",
  "sm_landmark",
  "sm_light_minor",
  "sm_light_major",
  "sm_light_float",
  "sm_light_vessel",
  "sm_marine_farm",
  "sm_radar_reflector",
  "sm_precautionary",
  "sm_radar_transponder",
  "sm_radar_station",
  "sm_calling-in_point",
  "sm_rescue_station",
  "sm_seaplane_landing_area_label",
  "sm_signal_station_traffic",
  "sm_signal_station_warning",
  "sm_building",
  "sm_small_craft_facility_1",
  "sm_spring",
  "sm_wreck",
  "sm_notice",
  "sm_harbour",
  "sp-track-line",
]
`;

exports[`makeMapStyle > layer inventory > offline 1`] = `
[
  "background",
  "earth",
  "landuse_park",
  "landuse_urban_green",
  "landuse_hospital",
  "landuse_industrial",
  "landuse_school",
  "landuse_beach",
  "landuse_zoo",
  "landuse_aerodrome",
  "roads_runway",
  "roads_taxiway",
  "landuse_runway",
  "water",
  "water_stream",
  "water_river",
  "landuse_pedestrian",
  "landuse_pier",
  "roads_tunnels_other_casing",
  "roads_tunnels_minor_casing",
  "roads_tunnels_link_casing",
  "roads_tunnels_major_casing",
  "roads_tunnels_highway_casing",
  "roads_tunnels_other",
  "roads_tunnels_minor",
  "roads_tunnels_link",
  "roads_tunnels_major",
  "roads_tunnels_highway",
  "buildings",
  "roads_pier",
  "roads_minor_service_casing",
  "roads_minor_casing",
  "roads_link_casing",
  "roads_major_casing_late",
  "roads_highway_casing_late",
  "roads_other",
  "roads_link",
  "roads_minor_service",
  "roads_minor",
  "roads_major_casing_early",
  "roads_major",
  "roads_highway_casing_early",
  "roads_highway",
  "roads_rail",
  "boundaries_country",
  "boundaries",
  "roads_bridges_other_casing",
  "roads_bridges_link_casing",
  "roads_bridges_minor_casing",
  "roads_bridges_major_casing",
  "roads_bridges_other",
  "roads_bridges_minor",
  "roads_bridges_link",
  "roads_bridges_major",
  "roads_bridges_highway_casing",
  "roads_bridges_highway",
  "address_label",
  "water_waterway_label",
  "roads_labels_minor",
  "water_label_ocean",
  "earth_label_islands",
  "water_label_lakes",
  "roads_labels_major",
  "places_subplace",
  "places_region",
  "places_locality",
  "places_country",
  "sm_anchorage_area",
  "sm_building_area",
  "sm_sea_area",
  "sm_rescue_station_area",
  "sm_anchor_berth_area",
  "sm_restricted_area",
  "sm_dredged_area",
  "sm_pontoon",
  "sm_fairway",
  "sm_small_craft_facility_area",
  "sm_hulk_area",
  "sm_pipeline_area",
  "sm_seaplane_landing_area",
  "sm_marine_farm_area",
  "sm_dumping_ground",
  "sm_cable_area",
  "sm_military_area",
  "sm_precautionary_area",
  "sm_landmark_area",
  "sm_cable_submarine",
  "sm_restricted_area_line",
  "sm_marine_farm_line",
  "sm_pipeline_submarine",
  "sm_pontoon_line",
  "sm_ferry_route",
  "sm_landmark_line",
  "sm_sea_area_line",
  "sm_anchorage-line-copy",
  "sm_anchorage-line",
  "sm_pile",
  "sm_mooring",
  "sm_rock",
  "sm_obstruction",
  "sm_light_color_1",
  "sm_light_color",
  "sm_anchorage",
  "sm_anchor_berth",
  "sm_beacon_cardinal",
  "sm_beacon_isolated_danger",
  "sm_beacon-pole",
  "sm_beacon_lateral",
  "sm_beacon_safe_water",
  "sm_beacon_special_purpose",
  "sm_topmark",
  "sm_buoy_installation",
  "sm_bridge_width",
  "sm_bridge_height",
  "sm_bunker_station",
  "sm_buoy_cardinal",
  "sm_buoy_isolated_danger",
  "sm_buoy_lateral",
  "sm_buoy_safe_water",
  "sm_buoy_special_purpose",
  "sm_coastguard_station",
  "sm_crane",
  "sm_distance_mark",
  "sm_daymark",
  "sm_fog_signal",
  "sm_hulk",
  "sm_landmark",
  "sm_light_minor",
  "sm_light_major",
  "sm_light_float",
  "sm_light_vessel",
  "sm_marine_farm",
  "sm_radar_reflector",
  "sm_precautionary",
  "sm_radar_transponder",
  "sm_radar_station",
  "sm_calling-in_point",
  "sm_rescue_station",
  "sm_seaplane_landing_area_label",
  "sm_signal_station_traffic",
  "sm_signal_station_warning",
  "sm_building",
  "sm_small_craft_facility_1",
  "sm_spring",
  "sm_wreck",
  "sm_notice",
  "sm_harbour",
  "sp-track-line",
]
`;
